RESOLVED FIXED245023
[css-contain] Fix contain-layout-breaks-002.html
https://bugs.webkit.org/show_bug.cgi?id=245023
Summary [css-contain] Fix contain-layout-breaks-002.html
Rob Buis
Reported 2022-09-10 02:46:19 PDT
Fix contain-layout-breaks-002.html.
Attachments
Patch (2.61 KB, patch)
2022-09-10 02:47 PDT, Rob Buis
no flags
Patch (2.67 KB, patch)
2022-09-10 08:32 PDT, Rob Buis
no flags
Patch (2.76 KB, patch)
2022-09-13 01:10 PDT, Rob Buis
no flags
Rob Buis
Comment 1 2022-09-10 02:47:43 PDT
Rob Buis
Comment 2 2022-09-10 08:32:51 PDT
Radar WebKit Bug Importer
Comment 3 2022-09-10 09:40:01 PDT
alan
Comment 4 2022-09-12 09:56:38 PDT
Comment on attachment 462250 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=462250&action=review > COMMIT_MESSAGE:6 > +Do not propagate forced break to parent within layout containment. Please explain why.
Rob Buis
Comment 5 2022-09-13 01:10:58 PDT
EWS
Comment 6 2022-09-13 06:21:44 PDT
Committed 254432@main (4b8892b1ab9c): <https://commits.webkit.org/254432@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462308 [details].
Note You need to log in before you can comment on or make changes to this bug.