[css-contain] Fix contain-layout-breaks-002.html https://bugs.webkit.org/show_bug.cgi?id=245023

Reviewed by Alan Bujtas.

Do not propagate forced break to parent within layout containment [1].

[1] https://drafts.csswg.org/css-contain-1/#containment-layout (See item 6/forced breaks)

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::applyBeforeBreak):

Canonical link: https://commits.webkit.org/254432@main